<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo1">DEMO 1 - SIMPLE DIALOG</string>
    <string name="demo2">DEMO 2 BUTTONS DIALOG</string>
    <string name="enter">Enter Some Text</string>
    <string name="demo3">DEMO 3 TEXT INPUT DIALOG</string>
    <string name="exercise3">EXERCISE 3</string>
    <string name="tvInputEx">Enter Number 1:</string>
    <string name="tvInputEx2">Enter Number 2:</string>
    <string name="demo4">DEMO 4 DATEPICKER DIALOG</string>
    <string name="demo5">DEMO 4 TIMEPICKER DIALOG</string>
</resources>