<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDemo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo2" />

        <TextView
            android:id="@+id/textViewDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo3" />

        <TextView
            android:id="@+id/textViewDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExercise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise3" />

        <TextView
            android:id="@+id/textViewExercise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo4" />

        <TextView
            android:id="@+id/textViewDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo5" />

        <TextView
            android:id="@+id/textViewDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</LinearLayout>